Source/ThirdParty/ANGLE/src/compiler/translator/TranslatorMetalDirect/IdGen.cpp
@@ -9,9 +9,7 @@
 #include <limits>
 #include <unordered_map>
 #include <unordered_set>
-
-#include "compiler/translator/TranslatorMetalDirect/RewriteKeywords.h"
-
+#include "compiler/translator/TranslatorMetalDirect/IdGen.h"
 using namespace sh;
 
 ////////////////////////////////////////////////////////////////////////////////
