Source/ThirdParty/ANGLE/src/compiler/translator/TranslatorMetalDirect/Name.cpp
@@ -69,11 +69,20 @@ void Name::emit(TInfoSinkBase &out) const
     switch (mSymbolType)
     {
         case SymbolType::BuiltIn:
-        case SymbolType::UserDefined:
             ASSERT(!mRawName.empty());
             out << mRawName;
             break;
-
+        case SymbolType::UserDefined:
+            ASSERT(!mRawName.empty());
+            if (mRawName != "main")
+            {
+                out << kUserDefinedNamePrefix << mRawName;
+            }
+            else
+            {
+                out << mRawName;
+            }
+            break;
         case SymbolType::AngleInternal:
             ASSERT(!mRawName.empty());
             if (mRawName.beginsWith(kAngleInternalPrefix))
